<resources>
    <string name="app_name">LearnVideo</string>
    <string name="camera_test">camera test</string>
    <string name="mediaPlayer_test">mediaPlayer test</string>
    <string name="sample_player_test">simPlayer test</string>
    <string name="sync_player_test">syncPlayer test</string>
    <string name="camera1_test">camera1 test</string>
    <string name="camera2_test">camera2 test</string>
    <string name="cameraX_test">cameraX test</string>
    <string name="switch_camera">switch camera</string>
    <string name="take_photo">Take Photo</string>
    <string name="start">start</string>
    <string name="pause">pause</string>
    <string name="stop">stop</string>
</resources>