<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/camera1_test"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/camera1_test"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/camera2_test"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/camera2_test"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/camera1_test"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/cameraX_test"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cameraX_test"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/camera2_test"/>

</androidx.constraintlayout.widget.ConstraintLayout>