<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/camera_test"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/camera_test"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/mediaPlayer_test"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mediaPlayer_test"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/camera_test" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sample_player_test"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sample_player_test"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mediaPlayer_test" />

</androidx.constraintlayout.widget.ConstraintLayout>